--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,13 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
+    <string-array name = "buildings">
+        <item>McNamara</item>
+        <item>Moos</item>
+        <item>Rapson</item>
+        <item>Ford</item>
+    </string-array>
+
     <string name="menu_home">Home</string>
     <string name="menu_saved_locations">Saved Locations</string>
     <string name="menu_travel_history">Travel History</string>
