--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     </string-array>
 
     <string name="menu_home">Home</string>
-    <string name="menu_saved_locations">Saved Locations</string>
+    <string name="menu_saved_locations">Saved Routes</string>
     <string name="menu_travel_history">Travel History</string>
     <string name="menu_tools">Tools</string>
     <string name="menu_share">Share</string>
