made some ui updates

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
         <item>Moos</item>
         <item>Rapson</item>
         <item>Ford</item>
+        <item>Kolthoff</item>
+        <item>Williamson</item>
     </string-array>
 
     <string name="menu_home">Home</string>
